--- a/src/components/Dashboard/DashCard/DashCard.css
+++ b/src/components/Dashboard/DashCard/DashCard.css
@@ -262,6 +262,8 @@ img {
   }
 
   .content__bottom {
+     position: absolute;
+  bottom: 12%;
     display: flex;
     flex-direction: row;
     gap: 10px;
