--- a/src/components/Dashboard/DashCard/DashCard.css
+++ b/src/components/Dashboard/DashCard/DashCard.css
@@ -263,7 +263,7 @@ img {
 
   .content__bottom {
      position: absolute;
-  bottom: 12%;
+    bottom: 12% !important;
     display: flex;
     flex-direction: row;
     gap: 10px;
