--- a/src/Pages/DashBoard/Sellers/Sellers.css
+++ b/src/Pages/DashBoard/Sellers/Sellers.css
@@ -303,6 +303,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
   gap: 20px;
   width: 100%;
   padding: 20px;
